# parser_generator

lab2/: CMakeLists.txt
lab2/lib/: NFA.cpp  NFA.h  PostFix.cpp  PostFix.h  Stack.cpp  Stack.h  Thompson.cpp  Thompson.h  nfaStructs.h  utilities.cpp  utilities.h
lab2/src/: main.cpp
